--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 </head>
 <body onload="init()">
 	<div id="plus"></div>
-	<div id="text-container">This chat room was made in JavaScript using iframe elements and the postMessage method. Here is a link to the <a href="https://github.com/jsb7131/iframechat" rel="external" onclick="window.open(this.href); return false;">GitHub repository</a>. Click the plus sign to add chat windows, which are draggable by their header areas!</div>
+	<div id="text-container">This chat room was made in JavaScript using iframe elements and the postMessage method. Here is a link to the <a href="https://github.com/jsb7131/iframechat" rel="external" onclick="window.open(this.href); return false;">GitHub repository</a>. Click the plus sign to add chat windows, which are draggable by their header areas.</div>
 </body>
 </html>
